--- a/style.css
+++ b/style.css
@@ -10,3 +10,82 @@ License URI: license.txt
 Tags: TODO -- add tags
 */
 
+/* 
+  Lots of boilerplate read about and used from various sources including
+ 
+  Eric Meyer           http://ericmeyer.com
+  HTML5 Doctor         http://html5doctor.com
+  HTML5 Boilerplate    http://html5boilerplate.com
+  HTML5 Reset          http://html5reset.org
+-----------------------------------------------------------------------------*/
+
+/* Reset
+-----------------------------------------------------------------------------*/
+html, body, body div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, 
+pre, abbr, address, cite code, del, dfn, em, img, ins, kbd, q, samp, small, strong, 
+sub, sup, var, b, i, dl, dt, dd, ul, ol, li, fieldset, form, label, legend, table, 
+caption, tbody, tfoot, thead, tr, th, td, article, aside, figure, footer, header, 
+hgroup, menu, nav, section, time, mark, audio, video {
+    margin:0; 
+    padding:0; 
+    border:0; 
+    outline:0; 
+    font-size:100%; 
+    vertical-align:baseline; 
+    background:transparent;
+}
+
+article, aside, figure, footer, header, hgroup, nav, section {display:block;}
+
+ul {list-style:none;}
+
+blockquote, q {quotes:none;}
+blockquote:before, blockquote:after, q:before, q:after {content:''; content:none;}
+
+a {margin:0; padding:0; font-size:100%; vertical-align:baseline; background:transparent;}
+
+del {text-decoration:line-through;}
+
+abbr[title], dfn[title] {border-bottom:1px dotted #000; cursor:help;}
+
+/* Tables still need cellspacing=0 */
+table {border-collapse:collapse; border-spacing:0;}
+th {font-weight:bold; vertical-align:bottom;}
+td {font-weight:normal; vertical-align:top;}
+
+hr {display:block; height:1px; border:0; border-top:1px solid #ccc; margin:1em 0; padding:0;}
+
+input, select {vertical-align:middle;}
+
+pre {
+    white-space:pre; /* CSS2 */
+    white-space:pre-wrap; /* CSS2.1 */
+    white-space:pre-line; /* CSS3 */
+    word-wrap:break-word; /* IE */
+}
+
+input[type="radio"] {vertical-align:text-bottom;}
+input[type="checkbox"] {vertical-align:text-bottom;}
+
+table {font-size:inherit; font:100%;}
+
+small {font-size:85%;}
+
+strong {font-weight:bold;}
+
+td img {vertical-align:top;}
+
+sub, sup {font-size:75%; line-height:0; position:relative;}
+sup {top:-0.5em;}
+sub {bottom:-0.25em;}
+
+/* IE7 scale images more attractively */
+.ie7 img {-ms-interpolation-mode:bicubic;}
+
+/* Buttons need to play nice in IE */
+button {width:auto; overflow:visible;}
+
+/* Clearfix */
+.clearfix:before, .clearfix:after {content:"\0020"; display:block; height:0; overflow:hidden;}
+.clearfix:after {clear:both;}
+.clearfix {zoom:1;}
