--- a/style.css
+++ b/style.css
@@ -13,10 +13,11 @@ Tags: TODO -- add tags
 /* 
   Lots of boilerplate read about and used from various sources including
  
-  Eric Meyer           http://ericmeyer.com
-  HTML5 Doctor         http://html5doctor.com
-  HTML5 Boilerplate    http://html5boilerplate.com
-  HTML5 Reset          http://html5reset.org
+  Eric Meyer            http://ericmeyer.com
+  HTML5 Doctor          http://html5doctor.com
+  HTML5 Boilerplate     http://html5boilerplate.com
+  HTML5 Reset           http://html5reset.org
+  Fluid 960 Grid System http://www.designinfluences.com/fluid960gs
 -----------------------------------------------------------------------------*/
 
 /* Reset
@@ -85,7 +86,72 @@ sub {bottom:-0.25em;}
 /* Buttons need to play nice in IE */
 button {width:auto; overflow:visible;}
 
-/* Clearfix */
-.clearfix:before, .clearfix:after {content:"\0020"; display:block; height:0; overflow:hidden;}
-.clearfix:after {clear:both;}
-.clearfix {zoom:1;}
+/* Grid
+-----------------------------------------------------------------------------*/
+/* Fluid 960 GS */
+body {font:normal normal normal 100% Georgia, 'Times New Roman', serif;}
+#wrapper {max-width:63.75em; margin:0 auto;}
+.g1,
+.g2,
+.g3,
+.g4,
+.g5,
+.g6,
+.g7,
+.g8,
+.g9,
+.g10,
+.g11,
+.g12 {display:inline; float:left; margin-left:1%; margin-right:1%;}
+.alpha {margin-left:0;}
+.omega {margin-right:0;}
+.g1 {width:6.333%;}
+.g2 {width:14.666%;}
+.g3 {width:23%;}
+.g4 {width:31.333%;}
+.g5 {width:39.666%;}
+.g6 {width:48%;}
+.g7 {width:56.333%;}
+.g8 {width:64.666%;}
+.g9 {width:73%;}
+.g10 {width:81.333%;}
+.g11 {width:89.666%;}
+.g12 {width:98%;}
+.prefix1 {padding-left:8.333%;}
+.prefix2 {padding-left:16.666%;}
+.prefix3 {padding-left:25%;}
+.prefix4 {padding-left:33.333%;}
+.prefix5 {padding-left:41.666%;}
+.prefix6 {padding-left:50%;}
+.prefix7 {padding-left:58.333%;}
+.prefix8 {padding-left:66.666%;}
+.prefix9 {padding-left:75%;}
+.prefix10 {padding-left:83.333%;}
+.prefix11 {padding-left:91.666%;}
+.suffix1 {padding-right:8.333%;}
+.suffix2 {padding-right:16.666%;}
+.suffix3 {padding-right:25%;}
+.suffix4 {padding-right:33.333%;}
+.suffix5 {padding-right:41.666%;}
+.suffix6 {padding-right:50%;}
+.suffix7 {padding-right:58.333%;}
+.suffix8 {padding-right:66.666%;}
+.suffix9 {padding-right:75%;}
+.suffix10 {padding-right:83.333%;}
+.suffix11 {padding-right:91.666%;}
+
+/* Clear Floated Elements
+--------------------------------------------------------------------------------*/
+
+/* http://sonspring.com/journal/clearing-floats */
+html body * span.clear,
+html body * div.clear,
+html body * li.clear,
+html body * dd.clear {background:none; border:0; clear:both; float:none; font-size:0; list-style:none; margin:0; padding:0; overflow:hidden; visibility:hidden; width:0; height:0;}
+
+/* http://www.positioneverything.net/easyclearing.html */
+
+.clearfix:after {clear:both; content:'.'; display:block; visibility:hidden; height:0;}
+.clearfix {display:inline-block;}
+* html .clearfix {height:1%;}
+.clearfix {display:block;}
